<resources>
    <string name="app_name">Raja Jain Offical Project</string>
    <string name="app_name1">One and Only</string>

    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">[532385157420326]</string>
    <string name="fb_login_protocol_scheme">fb[532385157420326]</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_map">Map</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_sign_out">Sign Out</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="default_notification_channel_id">1</string>
    <string name="icon_payment">Payment</string>
    <string name="menu_search">Search</string>

</resources>
