<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment"
            android:title="@string/icon_payment" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icon_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/icon_sign_out"
            android:title="@string/menu_sign_out" />
    </group>
</menu>
